--- a/rvmdk/project0.build_log.htm
+++ b/rvmdk/project0.build_log.htm
@@ -3,19 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\ti\TivaWare_C_Series-2.1.1.71\examples\boards\ek-tm4c123gxl\project0 - Copy - Copy - Copy\ADC_Ext_Trigger_API.uvproj
+G:\angular\ADC_Ext_Trigger_API\ADC_Ext_Trigger_API.uvproj
 Project File Date:  06/15/2015
 
 <h2>Output:</h2>
-Build target 'project0'
-compiling ADC_Ext_Trigger_API.c...
-assembling startup_rvmdk.S...
-linking...
-Program Size: Code=2928 RO-data=1060 RW-data=8 ZI-data=256  
-After Build - User command #1: fromelf --bin --output .\rvmdk\project0.bin .\rvmdk\project0.axf
-".\rvmdk\project0.axf" - 0 Error(s), 0 Warning(s).
-Load "C:\\ti\\TivaWare_C_Series-2.1.1.71\\examples\\boards\\ek-tm4c123gxl\\project0 - Copy - Copy - Copy\\rvmdk\\project0.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
+</pre>
+</body>
+</html>
